chore: tests, travis, coveralls, default client, watchQuery
chore:

- travis
- coveralls
- camelCased filenames
- code coverage ready to be pushed into coveralls
- little workaround for apollo-client typings

feature:

- default client
- watchQuery method
- working tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "src/index.ts",
     "tests/index.ts",
     "typings/main.d.ts",
+    "src/apolloClient.d.ts",
     "node_modules/angular2/testing.d.ts",
     "node_modules/angular2/typings/browser.d.ts"
   ]
