--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "example": "examples"
   },
   "scripts": {
-    "install": "node install.js",
     "pretest": "npm run build",
-    "test": "karma start",
+    "test": "npm run test-ci",
     "posttest": "npm run remap && npm run lint",
-    "remap": "remap-istanbul -i coverage/coverage-final.json -o coverage/coverage-mapped.json",
-    "lint": "tslint src/*.ts && tslint test/*.ts",
+    "test-ci": "karma start --browsers Firefox",
+    "test-only": "karma start",
+    "test-watch": "karma start --no-single-run",
+    "remap": "remap-istanbul -i coverage/coverage.json -t lcovonly -o coverage/lcov.info",
+    "lint": "tslint -e src/*.d.ts src/*.ts && tslint test/*.ts ",
     "build": "tsc",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "clear": "rimraf build/* coverage/*"
   },
   "repository": {
     "type": "git",
@@ -29,7 +32,7 @@
   "homepage": "https://github.com/apollostack/angular2-apollo#readme",
   "dependencies": {
     "angular2": "2.0.0-beta.15",
-    "apollo-client": "https://github.com/apollostack/apollo-client/tarball/120c586a5a3b2c1503c8ca78ae28d79141bd435c",
+    "apollo-client": "https://github.com/apollostack/apollo-client/tarball/5a847e58265dc0408cac2c9e416c142e98329d12",
     "es6-shim": "0.35.0",
     "fs.extra": "1.3.2",
     "reflect-metadata": "0.1.2",
@@ -38,13 +41,16 @@
   },
   "devDependencies": {
     "istanbul-instrumenter-loader": "^0.2.0",
+    "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-coverage": "^0.5.5",
+    "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.8",
     "karma-webpack": "^1.7.0",
     "remap-istanbul": "^0.6.3",
+    "rimraf": "^2.5.2",
     "tsc": "^1.20150623.0",
     "tslint": "^3.7.4",
     "typescript": "^1.8.10",
