chore(travis): enable code-coverage reports

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,4 +37,4 @@ script:
 
 after_script:
   # send code-coverage report to coveralls
-  # - coveralls < ./coverage/lcov.info || true
+  - coveralls < ./coverage/lcov.info || true
