--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
   "homepage": "https://github.com/apollostack/angular2-apollo#readme",
   "dependencies": {
     "angular2": "2.0.0-beta.15",
-    "apollo-client": "https://github.com/apollostack/apollo-client/tarball/5a847e58265dc0408cac2c9e416c142e98329d12",
+    "apollo-client": "0.1.2",
     "es6-shim": "0.35.0",
-    "fs.extra": "1.3.2",
+    "graphql": "^0.5.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "zone.js": "0.6.11"
