--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular2-apollo",
-  "version": "0.0.1-beta.2",
+  "version": "0.0.1",
   "description": "Angular 2.0 client for Apollo",
   "main": "build/src/index.js",
   "typings": "./build/src/index.d.ts",
