--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -8,7 +8,12 @@
     "angular2": "^2.0.0-beta.15",
     "angular2-apollo": "0.0.1",
     "apollo-client": "0.1.2",
+    "casual-browserify": "^1.5.2",
+    "express": "^4.13.4",
     "fs.extra": "^1.3.2",
+    "graphql": "^0.5.0",
+    "graphql-tools": "^0.3.8",
+    "http-proxy-middleware": "^0.14.0",
     "meteor-node-stubs": "~0.2.0"
   }
 }
