--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular2-apollo",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Angular 2.0 client for Apollo",
   "main": "build/src/index.js",
   "typings": "./build/src/index.d.ts",
@@ -31,13 +31,17 @@
   },
   "homepage": "https://github.com/apollostack/angular2-apollo#readme",
   "dependencies": {
-    "angular2": "2.0.0-beta.15",
+    "@angular/core":  "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "apollo-client": "0.1.2",
     "es6-shim": "0.35.0",
     "graphql": "^0.5.0",
     "lodash": "^4.11.1",
     "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
+    "rxjs": "5.0.0-beta.6",
     "zone.js": "0.6.11"
   },
   "devDependencies": {
