--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@angular/common": "2.0.0-rc.1",
     "@angular/compiler": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "apollo-client": "0.1.2",
+    "apollo-client": "^0.3.0",
     "es6-shim": "0.35.0",
     "graphql": "^0.5.0",
     "lodash": "^4.11.1",
