--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -5,15 +5,20 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "angular2": "^2.0.0-beta.15",
+    "@angular/core":  "2.0.0-rc.1",
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "angular2-apollo": "file:../../",
-    "apollo-client": "0.1.2",
+    "apollo-client": "0.3.12",
     "casual-browserify": "^1.5.2",
     "express": "^4.13.4",
     "fs.extra": "^1.3.2",
     "graphql": "^0.5.0",
     "graphql-tools": "^0.3.8",
     "http-proxy-middleware": "^0.14.0",
-    "meteor-node-stubs": "~0.2.0"
+    "meteor-node-stubs": "~0.2.0",
+    "rxjs": "^5.0.0-beta.6"
   }
 }
