--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -2,10 +2,11 @@
   "name": "apollo-test-app",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "dev": "rimraf node_modules/angular2-apollo && npm i && npm start"
   },
   "dependencies": {
-    "@angular/core":  "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
     "@angular/common": "2.0.0-rc.1",
     "@angular/compiler": "2.0.0-rc.1",
     "@angular/platform-browser": "2.0.0-rc.1",
@@ -20,5 +21,8 @@
     "http-proxy-middleware": "^0.14.0",
     "meteor-node-stubs": "~0.2.0",
     "rxjs": "^5.0.0-beta.6"
+  },
+  "devDependencies": {
+    "rimraf": "^2.5.2"
   }
 }
