--- a/package.json
+++ b/package.json
@@ -32,15 +32,16 @@
   },
   "homepage": "https://github.com/apollostack/angular2-apollo#readme",
   "dependencies": {
-    "@angular/core":  "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/common": "2.0.0-rc.1",
     "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "apollo-client": "^0.3.0",
     "es6-shim": "0.35.0",
     "graphql": "^0.5.0",
     "lodash": "^4.11.1",
+    "object-assign": "^4.1.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "0.6.11"
