docs(examples): Update and fix few issues

--- a/examples/hello-world/tsconfig.json
+++ b/examples/hello-world/tsconfig.json
@@ -4,5 +4,9 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "noImplicitAny": true
-  }
+  },
+  "files": [
+    "typings/index.d.ts",
+    "client/main.ts"
+  ]
 }
