--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -6,21 +6,24 @@
     "dev": "rimraf node_modules/angular2-apollo && npm i && npm start"
   },
   "dependencies": {
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/common": "^2.0.0-rc.1",
+    "@angular/compiler": "^2.0.0-rc.1",
+    "@angular/core": "^2.0.0-rc.1",
+    "@angular/platform-browser": "^2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
     "angular2-apollo": "file:../../",
-    "apollo-client": "0.3.12",
+    "apollo-client": "^0.3.12",
     "casual-browserify": "^1.5.2",
+    "es6-shim": "^0.35.1",
     "express": "^4.13.4",
     "fs.extra": "^1.3.2",
     "graphql": "^0.5.0",
     "graphql-tools": "^0.3.8",
     "http-proxy-middleware": "^0.14.0",
     "meteor-node-stubs": "~0.2.0",
-    "rxjs": "^5.0.0-beta.6"
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "rimraf": "^2.5.2"
