--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@angular/core": "^2.0.0-rc.1",
     "apollo-client": "^0.3.0",
+    "graphql-tag": "^0.1.7",
     "lodash": "^4.11.1"
   },
   "devDependencies": {
