--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -12,12 +12,13 @@
     "@angular/platform-browser": "^2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
     "angular2-apollo": "file:../../",
-    "apollo-client": "^0.3.12",
+    "apollo-client": "^0.4.1",
     "casual-browserify": "^1.5.2",
     "es6-shim": "^0.35.1",
     "express": "^4.13.4",
     "fs.extra": "^1.3.2",
     "graphql": "^0.5.0",
+    "graphql-tag": "^0.1.9",
     "graphql-tools": "^0.3.8",
     "http-proxy-middleware": "^0.14.0",
     "meteor-node-stubs": "~0.2.0",
