--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "lint": "tslint -e src/*.ts && tslint test/*.ts ",
     "build": "tsc",
     "watch": "tsc -w",
-    "clear": "rimraf build/* coverage/*",
-    "prepublish": "npm run build"
+    "clean": "rimraf build/* coverage/* typings/*",
+    "typings": "typings i",
+    "prepublish": "npm run clean && npm run typings && npm run build"
   },
   "repository": {
     "type": "git",
@@ -34,7 +35,7 @@
   "dependencies": {
     "@angular/core": "^2.0.0-rc.1",
     "apollo-client": "^0.3.0 || ^0.4.0",
-    "graphql-tag": "^0.1.7",
+    "graphql-tag": "^0.1.9",
     "lodash": "^4.11.1"
   },
   "devDependencies": {
@@ -60,6 +61,7 @@
     "rxjs": "5.0.0-beta.6",
     "tslint": "^3.7.4",
     "typescript": "^1.8.10",
+    "typings": "^1.3.1",
     "validate-commit-msg": "^2.6.1",
     "webpack": "^1.13.0",
     "zone.js": "^0.6.11"
