--- a/package.json
+++ b/package.json
@@ -32,20 +32,26 @@
     "url": "https://github.com/apollostack/angular2-apollo/issues"
   },
   "homepage": "https://github.com/apollostack/angular2-apollo#readme",
-  "dependencies": {
-    "@angular/core": "^2.0.0-rc.1",
+  "peerDependencies": {
     "apollo-client": "^0.3.0 || ^0.4.0",
-    "graphql-tag": "^0.1.9",
-    "lodash": "^4.11.1"
+    "@angular/core": "^2.0.0-rc.1"
+  },
+  "dependencies": {
+    "lodash.assign": "^4.0.9",
+    "lodash.forin": "^4.2.0",
+    "lodash.isequal": "^4.2.0"
   },
   "devDependencies": {
     "@angular/common": "^2.0.0-rc.1",
     "@angular/compiler": "^2.0.0-rc.1",
+    "@angular/core": "^2.0.0-rc.1",
     "@angular/platform-browser": "^2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
+    "apollo-client": "^0.4.1",
     "es6-shim": "^0.35.0",
     "ghooks": "^1.2.1",
     "graphql": "^0.5.0",
+    "graphql-tag": "^0.1.9",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
