--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "peerDependencies": {
     "apollo-client": "^0.3.0 || ^0.4.0",
-    "@angular/core": "^2.0.0-rc.1"
+    "@angular/core": "^2.0.0-rc.1",
+    "rxjs": "^5.0.0-beta.6"
   },
   "dependencies": {
     "lodash.assign": "^4.0.9",
