--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -6,13 +6,14 @@
     "dev": "rimraf node_modules/angular2-apollo && npm i && npm start"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.1",
-    "@angular/compiler": "^2.0.0-rc.1",
-    "@angular/core": "^2.0.0-rc.1",
-    "@angular/platform-browser": "^2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
+    "@angular/common": "^2.0.0-rc.5",
+    "@angular/compiler": "^2.0.0-rc.5",
+    "@angular/core": "^2.0.0-rc.5",
+    "@angular/forms": "^0.3.0",
+    "@angular/platform-browser": "^2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
     "angular2-apollo": "file:../../",
-    "apollo-client": "^0.4.1",
+    "apollo-client": "^0.4.11",
     "casual-browserify": "^1.5.2",
     "es6-shim": "^0.35.1",
     "express": "^4.13.4",
