chore: remove build/src from .npmignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,12 @@
-.github
-build/tests
-examples
-src
-tests
-typings
+.github/
+build/tests/
+examples/
+src/
+tests/
+typings/
 .travis.yml
 .typingsrc
+CHANGELOG.md
 global.d.ts
 karma.conf.js
 tsconfig.json
