--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test-only": "karma start",
     "test-watch": "karma start --no-single-run",
     "remap": "remap-istanbul -i coverage/coverage.json -t lcovonly -o coverage/lcov.info",
-    "lint": "tslint -e src/*.ts && tslint test/*.ts ",
+    "lint": "tslint -e src/*.ts && tslint tests/*.ts",
     "build": "tsc",
     "watch": "tsc -w",
     "clean": "rimraf build/* coverage/* typings/*",
