--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -6,12 +6,12 @@
     "dev": "rimraf node_modules/angular2-apollo && npm i && npm start"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.5",
-    "@angular/compiler": "^2.0.0-rc.5",
-    "@angular/core": "^2.0.0-rc.5",
-    "@angular/forms": "^0.3.0",
-    "@angular/platform-browser": "^2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
+    "@angular/common": "^2.0.0-rc.6",
+    "@angular/compiler": "^2.0.0-rc.6",
+    "@angular/core": "^2.0.0-rc.6",
+    "@angular/forms": "^2.0.0-rc.6",
+    "@angular/platform-browser": "^2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.6",
     "angular2-apollo": "file:../../",
     "apollo-client": "^0.4.13",
     "casual-browserify": "^1.5.2",
@@ -24,7 +24,7 @@
     "http-proxy-middleware": "^0.14.0",
     "meteor-node-stubs": "~0.2.0",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "5.0.0-beta.11",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
