docs(example): stick to typescript@2.0.0

--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -47,6 +47,6 @@
     "nodemon": "^1.10.2",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "^2.0.0"
+    "typescript": "2.0.0"
   }
 }
