--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -1,33 +1,52 @@
 {
-  "name": "apollo-test-app",
-  "private": true,
+  "name": "hello-world",
+  "version": "0.0.0",
+  "license": "MIT",
+  "angular-cli": {},
   "scripts": {
-    "start": "meteor run",
-    "dev": "rimraf node_modules/angular2-apollo && npm i && npm start"
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "client": "ng serve --proxy-conf proxy.conf.json",
+    "server": "nodemon api/index.js --watch api --exec babel-node"
   },
+  "private": true,
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.6",
-    "@angular/compiler": "^2.0.0-rc.6",
-    "@angular/core": "^2.0.0-rc.6",
-    "@angular/forms": "^2.0.0-rc.6",
-    "@angular/platform-browser": "^2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.6",
-    "angular2-apollo": "file:../../",
-    "apollo-client": "^0.4.13",
-    "casual-browserify": "^1.5.2",
-    "es6-shim": "^0.35.1",
-    "express": "^4.13.4",
-    "fs.extra": "^1.3.2",
-    "graphql": "^0.5.0",
-    "graphql-tag": "^0.1.9",
-    "graphql-tools": "^0.3.8",
-    "http-proxy-middleware": "^0.14.0",
-    "meteor-node-stubs": "~0.2.0",
-    "reflect-metadata": "^0.1.3",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
+    "@angular/forms": "0.3.0",
+    "@angular/http": "2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+    "@angular/router": "3.0.0-rc.1",
+    "angular2-apollo": "^0.4.4",
+    "apollo-client": "^0.4.14",
+    "core-js": "^2.4.0",
     "rxjs": "5.0.0-beta.11",
-    "zone.js": "^0.6.12"
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.6.17"
   },
   "devDependencies": {
-    "rimraf": "^2.5.2"
+    "@angular/platform-server": "2.0.0-rc.5",
+    "@types/isomorphic-fetch": "0.0.30",
+    "@types/node": "^6.0.38",
+    "angular-cli": "1.0.0-beta.11-webpack.8",
+    "apollo-server": "^0.2.6",
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-2": "^6.13.0",
+    "babel-register": "^6.14.0",
+    "body-parser": "^1.15.2",
+    "casual": "^1.5.3",
+    "codelyzer": "~0.0.26",
+    "concurrently": "^2.2.0",
+    "cors": "^2.8.0",
+    "express": "^4.14.0",
+    "graphql": "^0.7.0",
+    "graphql-tools": "^0.6.5",
+    "nodemon": "^1.10.2",
+    "ts-node": "1.2.1",
+    "tslint": "3.13.0",
+    "typescript": "2.0.0"
   }
 }
