--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test-only": "karma start",
     "test-watch": "karma start --no-single-run",
     "remap": "remap-istanbul -i coverage/coverage.json -t lcovonly -o coverage/lcov.info",
-    "lint": "tslint -e src/*.ts && tslint test/*.ts ",
+    "lint": "tslint -e src/*.ts && tslint tests/*.ts ",
     "build": "tsc",
     "watch": "tsc -w",
     "clean": "rimraf build/* coverage/* typings/*",
@@ -46,21 +46,25 @@
     "@angular/core": "^2.0.0-rc.6",
     "@angular/platform-browser": "^2.0.0-rc.6",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.6",
+    "@types/isomorphic-fetch": "0.0.30",
+    "@types/jasmine": "^2.2.33",
+    "@types/lodash": "^4.14.34",
+    "@types/node": "^6.0.38",
     "apollo-client": "^0.4.13",
     "es6-shim": "^0.35.0",
     "ghooks": "^1.2.1",
-    "graphql": "^0.5.0",
+    "graphql": "^0.7.0",
     "graphql-tag": "^0.1.9",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-coverage": "^0.5.5",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.8",
+    "karma": "^1.0.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
     "karma-webpack": "^1.7.0",
-    "reflect-metadata": "0.1.2",
+    "reflect-metadata": "^0.1.8",
     "remap-istanbul": "^0.6.3",
     "rimraf": "^2.5.2",
     "rxjs": "5.0.0-beta.11",
