chore: drop typings - use graphql-typings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,7 @@
     "lib": ["es6", "dom"]
   },
   "files": [
-    "typings/index.d.ts",
-    "global.d.ts",
+    "typings.d.ts",
     "src/index.ts",
     "tests/index.ts"
    ]
