--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ghooks": "^1.2.1",
     "graphql": "^0.7.0",
     "graphql-tag": "^0.1.9",
+    "graphql-typings": "0.0.1-beta-2",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
@@ -70,7 +71,6 @@
     "rxjs": "5.0.0-beta.11",
     "tslint": "^3.7.4",
     "typescript": "^2.0.0",
-    "typings": "^1.3.1",
     "validate-commit-msg": "^2.6.1",
     "webpack": "^1.13.0",
     "zone.js": "^0.6.11"
