Renamed "Tools" -> "Server"

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -49,7 +49,7 @@ nav_links:
     url: http://dev.apollodata.com/react
   'Core JS':
     url: http://dev.apollodata.com/core
-  'Tools':
+  'Server':
     url: http://dev.apollodata.com/tools
   # 'Community':
   #   url: http://dev.apollodata.com/community
