--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "ghooks": "^1.2.1",
     "graphql": "^0.7.0",
     "graphql-tag": "^0.1.9",
-    "graphql-typings": "0.0.1-beta-2",
     "istanbul-instrumenter-loader": "^1.0.0",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
@@ -69,6 +68,7 @@
     "rimraf": "^2.5.2",
     "rxjs": "5.0.0-beta.12",
     "tslint": "^3.7.4",
+    "typed-graphql": "^1.0.1",
     "typescript": "^2.0.0",
     "validate-commit-msg": "^2.6.1",
     "webpack": "^1.13.0",
