--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular2-apollo",
-  "version": "0.4.6",
+  "version": "0.5.0",
   "description": "Angular 2.0 client for Apollo",
   "main": "build/src/index.js",
   "typings": "./build/src/index.d.ts",
@@ -29,7 +29,7 @@
     "prepublish": "npm run clean && npm run build"
   },
   "peerDependencies": {
-    "apollo-client": "^0.3.0 || ^0.4.0",
+    "apollo-client": "^0.4.0",
     "@angular/core": "^2.0.0",
     "rxjs": "^5.0.0-beta.12"
   },
