--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,6 +26,7 @@ sidebar_categories:
     - pagination
     - optimistic-ui
     - prefetching
+    - server-side-rendering
 github_repo: apollostack/angular2-docs
 content_root: source
 
