feat: Add AOT support

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ coverage
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/
+compiled
 
 # Dependency directories
 node_modules
