--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -6,19 +6,22 @@
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "client": "ng serve --proxy-conf proxy.conf.json",
-    "server": "nodemon api/index.js --watch api --exec babel-node"
+    "server": "nodemon api/index.js --watch api --exec babel-node",
+    "build:aot": "./node_modules/.bin/ngc -p src/tsconfig.aot.json"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.0.0",
-    "@angular/compiler": "^2.0.0",
-    "@angular/core": "^2.0.0",
-    "@angular/forms": "^2.0.0",
-    "@angular/http": "^2.0.0",
-    "@angular/platform-browser": "^2.0.0",
-    "@angular/platform-browser-dynamic": "^2.0.0",
-    "@angular/router": "^3.0.0",
-    "angular2-apollo": "^0.5.0",
+    "@angular/common": "^2.1.0",
+    "@angular/compiler": "^2.1.0",
+    "@angular/compiler-cli": "^2.1.0",
+    "@angular/core": "^2.1.0",
+    "@angular/forms": "^2.1.0",
+    "@angular/http": "^2.1.0",
+    "@angular/platform-browser": "^2.1.0",
+    "@angular/platform-browser-dynamic": "^2.1.0",
+    "@angular/platform-server": "^2.1.0",
+    "@angular/router": "^3.1.0",
+    "angular2-apollo": "file:../../",
     "apollo-client": "^0.4.16",
     "core-js": "^2.4.0",
     "rxjs": "5.0.0-beta.12",
@@ -26,7 +29,6 @@
     "zone.js": "^0.6.17"
   },
   "devDependencies": {
-    "@angular/platform-server": "^2.0.0",
     "@types/isomorphic-fetch": "0.0.30",
     "@types/node": "^6.0.38",
     "angular-cli": "1.0.0-beta.11-webpack.8",
