--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "peerDependencies": {
     "apollo-client": "^0.5.0",
     "@angular/core": "^2.0.0",
-    "rxjs": "^5.0.0-rc.1"
+    "rxjs": "^5.0.0-beta.12 || ^5.0.0-rc.1"
   },
   "dependencies": {
     "apollo-client-rxjs": "^0.2.0",
