Support apollo-client v0.5.0 (#132)

--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "prepublish": "npm run clean && npm run build"
   },
   "peerDependencies": {
-    "apollo-client": "^0.4.0",
+    "apollo-client": "^0.5.0",
     "@angular/core": "^2.0.0",
-    "rxjs": "^5.0.0-beta.12"
+    "rxjs": "^5.0.0-beta.12 || ^5.0.0-rc.1"
   },
   "dependencies": {
-    "apollo-client-rxjs": "^0.1.0",
+    "apollo-client-rxjs": "~0.2.1",
     "lodash.assign": "^4.0.9",
     "lodash.forin": "^4.2.0",
     "lodash.isequal": "^4.2.0"
@@ -46,11 +46,12 @@
     "@angular/platform-browser": "^2.0.0",
     "@angular/platform-browser-dynamic": "^2.0.0",
     "@types/chai": "^3.4.33",
+    "@types/es6-shim": "^0.31.32",
     "@types/isomorphic-fetch": "0.0.30",
     "@types/jasmine": "^2.2.33",
     "@types/lodash": "^4.14.34",
     "@types/node": "^6.0.38",
-    "apollo-client": "^0.4.22",
+    "apollo-client": "^0.5.0",
     "es6-shim": "^0.35.0",
     "ghooks": "^1.2.1",
     "graphql": "^0.7.0",
