--- a/examples/hello-world/src/tsconfig.aot.json
+++ b/examples/hello-world/src/tsconfig.aot.json
@@ -3,7 +3,6 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": ["es6", "dom"],
     "mapRoot": "./",
     "module": "es6",
     "moduleResolution": "node",
@@ -22,7 +21,7 @@
     "node_modules"
   ],
   "angularCompilerOptions": {
-    "genDir": "src/compiled",
+    "genDir": "../dist/compiled",
     "skipMetadataEmit" : true
   }
 }
