--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   # remove unused node modules from cache
-  - yarn clean 
+  - npm prune
 
 script: yarn test
 
