--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
-sudo: false
+sudo: true
 
 language: node_js
 
 node_js:
-  - "0.12"
   - "4"
   - "5"
   - "6"
@@ -11,24 +10,32 @@ node_js:
 cache:
   directories:
     # cache node modules
+    - $HOME/.npm
+    - $HOME/.yarn-cache
     - node_modules
 
 notifications:
   # disable email notification
   email: false
 
-install:
+before_install:
+  # Repo for Yarn
+  - sudo apt-key adv --keyserver pgp.mit.edu --recv D101F7899D41F3C3
+  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -qq yarn
+  - yarn global add coveralls
+
+install: yarn
+
+before_script:
   # use firefox
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm i
-  - npm install -g coveralls
-
-script:
   # remove unused node modules from cache
   - npm prune
-  # karma tests
-  - npm test
+
+script: yarn test
 
 after_script:
   # send code-coverage report to coveralls
