--- a/package.json
+++ b/package.json
@@ -16,15 +16,13 @@
   "homepage": "https://github.com/apollostack/angular2-apollo#readme",
   "scripts": {
     "pretest": "npm run build",
-    "test": "npm run test-ci",
+    "test": "npm run test-only",
     "posttest": "npm run remap && npm run lint",
-    "test-ci": "karma start --browsers Firefox",
-    "test-only": "karma start",
-    "test-watch": "karma start --no-single-run",
-    "remap": "remap-istanbul -i coverage/coverage.json -t lcovonly -o coverage/lcov.info",
+    "test-only": "jest",
+    "test-watch": "jest --watch",
+    "remap": "remap-istanbul -i coverage/coverage-final.json -t lcovonly -o coverage/lcov.info",
     "lint": "tslint -e src/*.ts && tslint tests/*.ts ",
     "build": "tsc",
-    "watch": "tsc -w",
     "clean": "rimraf build/* coverage/*",
     "prepublish": "npm run clean && npm run build"
   },
@@ -48,7 +46,7 @@
     "@types/chai": "^3.4.33",
     "@types/es6-shim": "^0.31.32",
     "@types/isomorphic-fetch": "0.0.30",
-    "@types/jasmine": "^2.2.33",
+    "@types/jest": "^15.1.32",
     "@types/lodash": "^4.14.34",
     "@types/node": "^6.0.38",
     "apollo-client": "^0.5.0",
@@ -56,15 +54,7 @@
     "ghooks": "^1.2.1",
     "graphql": "^0.7.0",
     "graphql-tag": "^0.1.9",
-    "istanbul-instrumenter-loader": "^1.0.0",
-    "jasmine": "^2.4.1",
-    "jasmine-core": "^2.4.1",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.1",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-webpack": "^1.7.0",
+    "jest": "^16.0.2",
     "reflect-metadata": "^0.1.8",
     "remap-istanbul": "^0.7.0",
     "rimraf": "^2.5.2",
@@ -73,12 +63,20 @@
     "typed-graphql": "^1.0.1",
     "typescript": "^2.0.0",
     "validate-commit-msg": "^2.6.1",
-    "webpack": "^1.13.0",
     "zone.js": "^0.6.23"
   },
   "config": {
     "ghooks": {
       "commit-msg": "validate-commit-msg"
     }
+  },
+  "jest": {
+    "moduleFileExtensions": ["js"],
+    "testRegex": "\\.spec\\.js$",
+    "testPathDirs": ["<rootDir>/build/tests"],
+    "browser": true,
+    "collectCoverage": true,
+    "coverageDirectory": "coverage",
+    "coverageReporters": ["json"]
   }
 }
