--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
   "files": [
     "typings.d.ts",
     "src/index.ts",
-    "tests/index.ts"
+    "tests/Angular2Apollo.spec.ts",
+    "tests/SelectPipe.spec.ts"
    ]
 }
