--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,6 +27,7 @@ sidebar_categories:
     - optimistic-ui
     - prefetching
     - server-side-rendering
+    - angular-cli
 github_repo: apollostack/angular2-docs
 content_root: source
 
