--- a/examples/hello-world/src/tsconfig.aot.json
+++ b/examples/hello-world/src/tsconfig.aot.json
@@ -21,7 +21,7 @@
     "node_modules"
   ],
   "angularCompilerOptions": {
-    "genDir": "../dist/compiled",
+    "genDir": "aot",
     "skipMetadataEmit" : true
   }
 }
