--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -4,10 +4,11 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
+    "preclient": "npm run build",
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "client": "ng serve --proxy-conf proxy.conf.json",
     "server": "nodemon api/index.js --watch api --exec babel-node",
-    "build:aot": "./node_modules/.bin/ngc -p src/tsconfig.aot.json"
+    "build": "./node_modules/.bin/ngc -p src/tsconfig.aot.json"
   },
   "private": true,
   "dependencies": {
@@ -22,13 +23,14 @@
     "@angular/platform-server": "^2.1.0",
     "@angular/router": "^3.1.0",
     "angular2-apollo": "file:../../",
-    "apollo-client": "^0.5.0",
+    "apollo-client": "~0.5.0",
     "core-js": "^2.4.0",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.17"
   },
   "devDependencies": {
+    "@types/es6-shim": "^0.31.32",
     "@types/isomorphic-fetch": "0.0.30",
     "@types/node": "^6.0.38",
     "angular-cli": "1.0.0-beta.11-webpack.8",
