--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -25,7 +25,7 @@
     "angular2-apollo": "file:../../",
     "apollo-client": "~0.5.0",
     "core-js": "^2.4.0",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.17"
   },
@@ -51,6 +51,6 @@
     "nodemon": "^1.10.2",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "2.0.0"
+    "typescript": "^2.0.6"
   }
 }
