--- a/package.json
+++ b/package.json
@@ -38,16 +38,16 @@
     "lodash.isequal": "^4.2.0"
   },
   "devDependencies": {
-    "@angular/common": "^2.0.0",
-    "@angular/compiler": "^2.0.0",
+    "@angular/common": "^2.1.0",
+    "@angular/compiler": "^2.1.0",
     "@angular/compiler-cli": "^2.1.0",
-    "@angular/core": "^2.0.0",
-    "@angular/platform-browser": "^2.0.0",
-    "@angular/platform-browser-dynamic": "^2.0.0",
+    "@angular/core": "^2.1.0",
+    "@angular/platform-browser": "^2.1.0",
+    "@angular/platform-browser-dynamic": "^2.1.0",
     "@angular/platform-server": "^2.1.0",
     "@types/chai": "^3.4.33",
     "@types/es6-shim": "^0.31.32",
-    "@types/isomorphic-fetch": "0.0.30",
+    "@types/isomorphic-fetch": "^0.0.30",
     "@types/jest": "^15.1.32",
     "@types/lodash": "^4.14.34",
     "@types/node": "^6.0.38",
@@ -63,7 +63,7 @@
     "rxjs": "5.0.0-beta.12",
     "tslint": "^3.7.4",
     "typed-graphql": "^1.0.1",
-    "typescript": "^2.0.0",
+    "typescript": "^2.0.6",
     "validate-commit-msg": "^2.6.1",
     "zone.js": "^0.6.23"
   },
