--- a/examples/hello-world/src/tsconfig.aot.json
+++ b/examples/hello-world/src/tsconfig.aot.json
@@ -3,7 +3,6 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": ["es5", "dom"],
     "mapRoot": "./",
     "module": "es6",
     "moduleResolution": "node",
@@ -17,5 +16,12 @@
       "node",
       "isomorphic-fetch"
     ]
+  },
+  "exclude": [
+    "node_modules"
+  ],
+  "angularCompilerOptions": {
+    "genDir": "aot",
+    "skipMetadataEmit" : true
   }
 }
