--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,8 @@
     "tests/Angular2Apollo.spec.ts",
     "tests/SelectPipe.spec.ts",
     "tests/ApolloModule.spec.ts"
-   ]
+  ],
+  "angularCompilerOptions": {
+    "genDir": "compiled"
+  }
 }
