--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular2-apollo",
   "version": "0.8.0",
   "description": "Angular 2.0 client for Apollo",
-  "main": "build/src/index.js",
+  "main": "build/bundles/apollo.umd.js",
   "typings": "./build/src/index.d.ts",
   "author": "Uri Goldshtein <uri.goldshtein@gmail.com> (http://github.com/urigo/)",
   "license": "MIT",
@@ -23,6 +23,8 @@
     "remap": "remap-istanbul -i coverage/coverage-final.json -t lcovonly -o coverage/lcov.info",
     "lint": "tslint -e src/*.ts && tslint tests/*.ts ",
     "build": "./node_modules/.bin/ngc -p tsconfig.json",
+    "postbuild": "npm run bundle",
+    "bundle": "rollup -c",
     "clean": "rimraf build/* coverage/*",
     "prepublish": "npm run clean && npm run build"
   },
@@ -58,6 +60,7 @@
     "reflect-metadata": "^0.1.8",
     "remap-istanbul": "^0.7.0",
     "rimraf": "^2.5.2",
+    "rollup": "^0.36.3",
     "rxjs": "5.0.0-beta.12",
     "tslint": "^3.7.4",
     "typed-graphql": "^1.0.1",
