--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "src/index.ts",
     "tests/Angular2Apollo.spec.ts",
     "tests/SelectPipe.spec.ts",
-    "tests/ApolloModule.spec.ts"
+    "tests/ApolloModule.spec.ts",
+    "tests/graphql.spec.ts"
   ],
   "angularCompilerOptions": {
     "genDir": "compiled"
