Use Angular instead of Angular 2

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Apollo Angular2 Guide
-subtitle: A guide to using the Apollo GraphQL Client with Angular2.
+title: Apollo Angular Guide
+subtitle: A guide to using the Apollo GraphQL Client with Angular.
 description:
 author:
 language:
