Add chatper about fragments (#17)

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,6 +25,7 @@ sidebar_categories:
     - auth
     - pagination
     - optimistic-ui
+    - fragments
     - prefetching
     - server-side-rendering
     - angular-cli
