chore: Use UMD bundle, support tree-shaking

--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -25,17 +25,16 @@
     "@angular/platform-server": "~2.1.2",
     "@angular/router": "~3.1.2",
     "angular2-apollo": "file:../../",
-    "apollo-client": "~0.5.0",
+    "apollo-client": "~0.5.1",
     "core-js": "~2.4.0",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "~1.1.1",
     "zone.js": "~0.6.26"
   },
   "devDependencies": {
-    "@types/es6-shim": "^0.31.32",
     "@types/isomorphic-fetch": "0.0.30",
     "@types/node": "^6.0.38",
-    "angular-cli": "1.0.0-beta.11-webpack.8",
+    "angular-cli": "1.0.0-beta.19-3",
     "apollo-server": "^0.2.6",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
