--- a/examples/hello-world/src/tsconfig.aot.json
+++ b/examples/hello-world/src/tsconfig.aot.json
@@ -3,6 +3,7 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "lib": ["es6", "dom"],
     "mapRoot": "./",
     "module": "es6",
     "moduleResolution": "node",
