--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.8.0",
   "description": "Angular 2.0 client for Apollo",
   "main": "build/bundles/apollo.umd.js",
+  "module": "build/src/index.js",
   "typings": "./build/src/index.d.ts",
   "author": "Uri Goldshtein <uri.goldshtein@gmail.com> (http://github.com/urigo/)",
   "license": "MIT",
@@ -64,7 +65,7 @@
     "rxjs": "5.0.0-beta.12",
     "tslint": "^3.7.4",
     "typed-graphql": "^1.0.1",
-    "typescript": "^2.0.6",
+    "typescript": "~2.0.6",
     "validate-commit-msg": "^2.6.1",
     "zone.js": "^0.6.23"
   },
