Use UMD and ES6 modules and support tree-shaking (#151)

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "angular2-apollo",
   "version": "0.8.0",
   "description": "Angular 2.0 client for Apollo",
-  "main": "build/src/index.js",
+  "main": "build/bundles/apollo.umd.js",
+  "module": "build/src/index.js",
   "typings": "./build/src/index.d.ts",
   "author": "Uri Goldshtein <uri.goldshtein@gmail.com> (http://github.com/urigo/)",
   "license": "MIT",
@@ -15,7 +16,7 @@
   },
   "homepage": "https://github.com/apollostack/angular2-apollo#readme",
   "scripts": {
-    "pretest": "npm run build",
+    "pretest": "npm run build-test",
     "test": "npm run test-only",
     "posttest": "npm run remap && npm run lint",
     "test-only": "jest",
@@ -23,6 +24,9 @@
     "remap": "remap-istanbul -i coverage/coverage-final.json -t lcovonly -o coverage/lcov.info",
     "lint": "tslint -e src/*.ts && tslint tests/*.ts ",
     "build": "./node_modules/.bin/ngc -p tsconfig.json",
+    "build-test": "./node_modules/.bin/ngc -p tsconfig.test.json",
+    "postbuild": "npm run bundle",
+    "bundle": "rollup -c",
     "clean": "rimraf build/* coverage/*",
     "prepublish": "npm run clean && npm run build"
   },
@@ -58,10 +62,11 @@
     "reflect-metadata": "^0.1.8",
     "remap-istanbul": "^0.7.0",
     "rimraf": "^2.5.2",
+    "rollup": "^0.36.3",
     "rxjs": "5.0.0-beta.12",
     "tslint": "^3.7.4",
     "typed-graphql": "^1.0.1",
-    "typescript": "^2.0.6",
+    "typescript": "~2.0.6",
     "validate-commit-msg": "^2.6.1",
     "zone.js": "^0.6.23"
   },
