--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -8,7 +8,9 @@
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "client": "ng serve --proxy-conf proxy.conf.json",
     "server": "nodemon api/index.js --watch api --exec babel-node",
-    "build": "./node_modules/.bin/ngc -p src/tsconfig.aot.json"
+    "build": "./node_modules/.bin/ngc -p src/tsconfig.aot.json",
+    "postbuild": "npm run tree-shaking",
+    "tree-shaking": "node_modules/.bin/rollup -c rollup.config.js"
   },
   "private": true,
   "dependencies": {
@@ -23,17 +25,16 @@
     "@angular/platform-server": "~2.1.2",
     "@angular/router": "~3.1.2",
     "angular2-apollo": "file:../../",
-    "apollo-client": "~0.5.0",
+    "apollo-client": "~0.5.1",
     "core-js": "~2.4.0",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "~1.1.1",
     "zone.js": "~0.6.26"
   },
   "devDependencies": {
-    "@types/es6-shim": "^0.31.32",
     "@types/isomorphic-fetch": "0.0.30",
     "@types/node": "^6.0.38",
-    "angular-cli": "1.0.0-beta.11-webpack.8",
+    "angular-cli": "1.0.0-beta.19-3",
     "apollo-server": "^0.2.6",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
@@ -49,6 +50,10 @@
     "graphql": "~0.7.0",
     "graphql-tools": "~0.8.0",
     "nodemon": "^1.10.2",
+    "rollup": "^0.36.3",
+    "rollup-plugin-commonjs": "^5.0.5",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-uglify": "^1.0.1",
     "ts-node": "1.2.1",
     "tslint": "~3.15.0",
     "typescript": "~2.0.6"
