chore(package): update tslint to version 4.0.1
https://greenkeeper.io/

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
     "lib": ["es6", "dom"],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   },
   "files": [
     "typings.d.ts",
