--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test-only": "jest",
     "test-watch": "jest --watch",
     "remap": "remap-istanbul -i coverage/coverage-final.json -t lcovonly -o coverage/lcov.info",
-    "lint": "tslint -e src/*.ts && tslint tests/*.ts ",
+    "lint": "tslint src/*.ts && tslint tests/*.ts ",
     "build": "./node_modules/.bin/ngc -p tsconfig.json",
     "build-test": "./node_modules/.bin/ngc -p tsconfig.test.json",
     "postbuild": "npm run bundle",
@@ -63,7 +63,7 @@
     "rimraf": "^2.5.2",
     "rollup": "^0.36.3",
     "rxjs": "5.0.0-beta.12",
-    "tslint": "^3.15.1",
+    "tslint": "^4.0.1",
     "typed-graphql": "^1.0.2",
     "typescript": "~2.0.6",
     "validate-commit-msg": "^2.8.2",
