--- a/package.json
+++ b/package.json
@@ -36,10 +36,7 @@
     "rxjs": "^5.0.0-beta.12 || ^5.0.0-rc.1"
   },
   "dependencies": {
-    "apollo-client-rxjs": "~0.2.3",
-    "lodash.assign": "^4.0.9",
-    "lodash.forin": "^4.2.0",
-    "lodash.isequal": "^4.2.0"
+    "apollo-client-rxjs": "~0.2.3"
   },
   "devDependencies": {
     "@angular/common": "^2.2.0",
