fix: use metadata also for index.ts
Fixes an issue with AoT compilation #177

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,8 @@
     "tests/ApolloModule.spec.ts"
   ],
   "angularCompilerOptions": {
-    "genDir": "compiled"
+    "genDir": "compiled",
+    "annotateForClosureCompiler": true,
+    "strictMetadataEmit": true
   }
 }
