fix: Make it AoT 2.3.1+ compatible

--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -14,22 +14,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.1.2",
-    "@angular/compiler": "~2.1.2",
-    "@angular/compiler-cli": "~2.1.2",
-    "@angular/core": "~2.1.2",
-    "@angular/forms": "~2.1.2",
-    "@angular/http": "~2.1.2",
-    "@angular/platform-browser": "~2.1.2",
-    "@angular/platform-browser-dynamic": "~2.1.2",
-    "@angular/platform-server": "~2.1.2",
-    "@angular/router": "~3.1.2",
+    "@angular/common": "~2.3.1",
+    "@angular/compiler": "~2.3.1",
+    "@angular/compiler-cli": "~2.3.1",
+    "@angular/core": "~2.3.1",
+    "@angular/forms": "~2.3.1",
+    "@angular/http": "~2.3.1",
+    "@angular/platform-browser": "~2.3.1",
+    "@angular/platform-browser-dynamic": "~2.3.1",
+    "@angular/platform-server": "~2.3.1",
+    "@angular/router": "~3.3.1",
     "angular2-apollo": "file:../../",
     "apollo-client": "~0.5.1",
     "core-js": "~2.4.0",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.0-rc.4",
     "ts-helpers": "~1.1.1",
-    "zone.js": "~0.6.26"
+    "zone.js": "~0.7.2"
   },
   "devDependencies": {
     "@types/isomorphic-fetch": "0.0.30",
